# transaction_processor

./: .pre-commit-config.yaml  Cargo.toml  README.md  example.csv  file.csv
.github/workflows/: build.yml
docs/: TDD.md
src/: lib.rs
src/handler/: input.rs  mod.rs  output.rs  transaction.rs
test_data/: 01.csv  02.csv  03.csv
tests/: simple_test.rs
