[package]
name = "bus_factor"
version = "0.1.0"
edition = "2021"
default-run = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "5.0.1"
clap = "3.1.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.80"
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.4"
wiremock = "0.5.7"
predicates = "2.0.3"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"