[package]
name = "calculator"
version = "0.1.0"
edition = "2021"
default-run = "transaction_processor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={ version="3.1.18", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
csv-async = { version="1.2.4", features=["tokio", "with_serde"] }

rand = { version = "0.3", optional=true}
csv = {version ="1.1.6", optional=true}

[features]
generate = ["rand", "csv"]

[dev-dependencies]
assert_cmd = "2.0.4"
wiremock = "0.5.7"
predicates = "2.0.3"

[[bin]]
name = "transaction_processor"
path = "src/bin/transaction_processor.rs"

[[bin]]
name = "transaction_generator"
path = "src/bin/transaction_generator.rs"
required-features = ["generate"]     # <--
