[package]
name = "transaction_processor"
version = "0.1.0"
edition = "2021"
default-run = "transaction_processor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={ version="3.1.18", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
csv-async = { version="1.2.4", features=["tokio", "with_serde"] }
futures = "0.3.21"
anyhow = "1.0"
rust_decimal = {version = "1.23.1", features=["serde-float", "serde-with-float"]}
rand = { version = "0.8.5", optional=true}
csv = "1.1"

[features]
default = ["generate"]
generate = ["rand"]

[dev-dependencies]
assert_cmd = "2.0.4"
wiremock = "0.5.7"
predicates = "2.0.3"

[[bin]]
name = "transaction_processor"
path = "src/bin/transaction_processor.rs"

[[bin]]
name = "transaction_generator"
path = "src/bin/transaction_generator.rs"
required-features = ["generate"]     # <--
